--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -3,16 +3,13 @@
 	<div class="container-fluid">
 	  <div class="row">
 
-
 			<ul class="nav navbar-nav navbar-right">
-				<li><a href="https://computer-science-and-computer-engineering.uark.edu/">Department of Computer Science and Computer Engineering
-				</a></li>
+				<li><a href="https://computer-science-and-computer-engineering.uark.edu/">CSCE</a></li>
 				<li><a href="https://www.uark.edu/">UARK</a></li>
 				<li><a href="{{ site.url }}{{ site.baseurl }}/about">About</a></li>
 				<li><a href="{{ site.url }}{{ site.baseurl }}/recruitment">Recruitment</a></li>
 			</ul>
 
-		
 	  </div>
 	</div>
   </div>
