--- a/_includes/jekyll_mapping.html
+++ b/_includes/jekyll_mapping.html
@@ -1,20 +1,12 @@
 {% if site.mapping.provider %}
     {% case site.mapping.provider %}
         {% when "google_js" %}
-            {% include jekyll_mapping_providers/gmap_js.js %}
-        {% when "openstreetmap" %}
-            {% include jekyll_mapping_providers/openstreetmap.js %}
-    {% endcase %}
-    {% if page.mapping %}
-    {% case site.mapping.provider %}
-        {% when "google_js" %}
-            <script type="text/javascript">
-                window.onload = function () { jekyllMapping.loadScript({% yaml_to_json mapping %}) };
+            <script>
+                var jekyllMappingAPIKey = '{{ site.mapping.api_key }}';
             </script>
+            <script src="javascripts/gmaps.js"></script>
         {% when "openstreetmap" %}
-            <script type="text/javascript">
-                window.onload = function () { jekyllMapping.mappingInitialize({% yaml_to_json mapping %}) };
-            </script>
+            <script src="http://www.openlayers.org/api/OpenLayers.js"></script>
+            <script src="javascripts/openstreetmaps.js"></script>
     {% endcase %}
-    {% endif %}
 {% endif %}
