--- a/_layouts/member.html
+++ b/_layouts/member.html
@@ -24,14 +24,14 @@ layout: default
 <div class="row">
 	<div class="col-sm-3">
 
-		{% if member.ucsf %}
+		{% if member.web %}
 		<div class="smallhead">
-			UCSF Profile
+			Personal Website
 		</div>
 		<div class="pad-left note">
 			<div class="smallspacer"></div>
 			<i class="fa fa-university"></i>
-			<a class="off" href="https://profiles.ucsf.edu/{{ member.ucsf }}">{{ member.ucsf }}</a>
+			<a class="off" href="{{ member.web }}">{{ member.web }}</a>
 		</div>
 		<div class="bigspacer"></div>
 		{% endif %}
