update thang's profile

--- a/css/main.scss
+++ b/css/main.scss
@@ -79,6 +79,11 @@ firstp {
 	padding-right: 26px;
 }
 
+/* Grid overrides */
+.col-sm-3 {
+	width: 30%;
+}
+
 /* Content text */
 .content {
 	padding-left: 26px;
