--- a/_layouts/homelay.html
+++ b/_layouts/homelay.html
@@ -2,11 +2,10 @@
 layout: default
 ---
 
-  <div id="homeid" class="col-sm-8">
-        <!-- <h1>Welcome to the Allan Lab</h1> -->
+  <!-- <div id="homeid" class="col-sm-8"> -->
 
 	{{ content }}
-  </div>
-  <div id="newsid" class="col-sm-4" >
+  <!-- </div> -->
+  <!-- <div id="newsid" class="col-sm-4" >
 	{% include news.html %}
-  </div>
+  </div> -->
