Making application tab adaptive to phone and solving spacing issue in publications

--- a/_includes/collapsible_panel.html
+++ b/_includes/collapsible_panel.html
@@ -42,7 +42,7 @@
                                         {% for resData in data %}
                                         {% if resData.category == category and resData.subCategory == appSubCat %}
                                         <li class="list-group-item">
-                                            <div>
+                                            <div class="row">
                                                 <div class="col-sm-6 clearfix">
                                                     <img src="{{ site.url }}{{ site.baseurl }}/images/pubpic/{{resData.image}}"
                                                         class="img-responsive" width="90%" style="float: left" />
