Changes to Research tab

--- a/_includes/collapsible_panel.html
+++ b/_includes/collapsible_panel.html
@@ -44,7 +44,7 @@
                                         <li class="list-group-item">
                                             <div class="row">
                                                 <div class="col-sm-6 clearfix">
-                                                    <img src="{{ site.url }}{{ site.baseurl }}/images/pubpic/{{resData.image}}"
+                                                    <img src="{{ site.url }}{{ site.baseurl }}/images/respic/{{resData.image}}"
                                                         class="img-responsive" width="90%" style="float: left" />
                                                 </div>
                                                 <div class="col-sm-6 clearfix">
@@ -80,7 +80,7 @@
                             <li class="list-group-item">
                                 <div>
                                     <div class="col-sm-6 clearfix">
-                                        <img src="{{ site.url }}{{ site.baseurl }}/images/pubpic/{{resData.image}}"
+                                        <img src="{{ site.url }}{{ site.baseurl }}/images/respic/{{resData.image}}"
                                             class="img-responsive" width="90%" style="float: left" />
                                     </div>
                                     <div class="col-sm-6 clearfix">
