--- a/_includes/header.html
+++ b/_includes/header.html
@@ -17,8 +17,7 @@
 		<li><a href="{{ site.url }}{{ site.baseurl }}/team">Team</a></li>
 		<li><a href="{{ site.url }}{{ site.baseurl }}/research">Research</a></li>
 		<li><a href="{{ site.url }}{{ site.baseurl }}/publications">Publications</a></li>
-		<li><a href="https://github.com/UARK-AICV">Code</a></li>
-		<li><a href="https://github.com/UARK-AICV/UARK-AICV.github.io/wiki">Wiki</a></li>
+		<li><a href="{{ site.url }}{{ site.baseurl }}/recruitment">Join Us</a></li>
 		<li><a href="{{ site.url }}{{ site.baseurl }}/contact">Contact</a></li>
 	  </ul>
 	</div>
